--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TMDBTest"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.activity.MoreMovieActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.DetailActivity"
+            android:exported="false"
+            android:theme="@style/Theme.NOActionBarTMDBTest" />
         <activity
             android:name=".ui.activity.MainActivity"
             android:exported="true">
